atualização index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>App5M - Desenvolvimento de Aplicativos Porto Alegre/RS</title>
+    <title>InsideTec - Desenvolvimento de Aplicativos Porto Alegre/RS</title>
     <meta name="description" content="Criação de apps, lojas virtuais, desenvolvimento de aplicativos em Porto Alegre. Aplicativos nativos para Android e iOS.">
     <meta name="keywords" content="criação de apps, criação de aplicativos, lojas virtuais, desenvolvimento de aplicativos, aplicativos, aplicativos móveis, android, ios, windows phone, poa, rs">
     
