--- a/pages/delivery.html
+++ b/pages/delivery.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>App5M Delivery - Plataforma de Delivery Completa</title>
-    <meta name="description" content="Conheça o App5M Delivery, plataforma completa para delivery com app para Android, iOS e painel administrativo web.">
-    <meta name="keywords" content="app5m delivery, delivery app, aplicativo delivery, sistema delivery, porto alegre">
+    <title>InsideTec Delivery - Plataforma de Delivery Completa</title>
+    <meta name="description" content="Conheça o InsideTec Delivery, plataforma completa para delivery com app para Android, iOS e painel administrativo web.">
+    <meta name="keywords" content="InsideTec delivery, delivery app, aplicativo delivery, sistema delivery, porto alegre">
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="../index.html">
-                <img src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjQwIiB2aWV3Qm94PSIwIDAgMTUwIDQwIiBmaWxsPSJub25lIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPgo8dGV4dCB4PSIxMCIgeT0iMjgiIGZpbGw9IndoaXRlIiBmb250LWZhbWlseT0iQXJpYWwsIHNhbnMtc2VyaWYiIGZvbnQtc2l6ZT0iMjQiIGZvbnQtd2VpZ2h0PSJib2xkIj5BcHA1TTwvdGV4dD4KPC9zdmc+" alt="App5M Logo">
+                <img src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjQwIiB2aWV3Qm94PSIwIDAgMTUwIDQwIiBmaWxsPSJub25lIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPgo8dGV4dCB4PSIxMCIgeT0iMjgiIGZpbGw9IndoaXRlIiBmb250LWZhbWlseT0iQXJpYWwsIHNhbnMtc2VyaWYiIGZvbnQtc2l6ZT0iMjQiIGZvbnQtd2VpZ2h0PSJib2xkIj5BcHA1TTwvdGV4dD4KPC9zdmc+" alt="InsideTec Logo">
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="about.html">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="delivery.html">App5M Delivery</a>
+                        <a class="nav-link active" href="delivery.html">InsideTec Delivery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cases.html">Cases</a>
@@ -59,11 +59,11 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <h1 class="display-4 fw-bold text-white mb-4">App5M Delivery</h1>
+                        <h1 class="display-4 fw-bold text-white mb-4">InsideTec Delivery</h1>
                         <p class="lead text-white mb-4">Tenha seu estabelecimento no smartphone de todos os seus clientes</p>
                         <h5 class="text-white mb-4">Disponível para Android, iOS e Site</h5>
                         <div class="hero-buttons">
-                            <a href="http://www.app5mdelivery.com.br/" class="btn btn-primary btn-lg me-3" target="_blank">Acessar Plataforma</a>
+                            <a href="http://www.InsideTecdelivery.com.br/" class="btn btn-primary btn-lg me-3" target="_blank">Acessar Plataforma</a>
                             <a href="#features" class="btn btn-outline-light btn-lg">Saiba Mais</a>
                         </div>
                     </div>
@@ -109,28 +109,28 @@
                             <div class="slide active">
                                 <div class="delivery-screenshot">
                                     <i class="fas fa-utensils fa-5x text-primary mb-3"></i>
-                                    <h4>Cardápio App5M Delivery</h4>
+                                    <h4>Cardápio InsideTec Delivery</h4>
                                     <p>Cardápio completo organizado por categorias</p>
                                 </div>
                             </div>
                             <div class="slide">
                                 <div class="delivery-screenshot">
                                     <i class="fas fa-user fa-5x text-primary mb-3"></i>
-                                    <h4>Login App5M Delivery</h4>
+                                    <h4>Login InsideTec Delivery</h4>
                                     <p>Sistema de login seguro para clientes</p>
                                 </div>
                             </div>
                             <div class="slide">
                                 <div class="delivery-screenshot">
                                     <i class="fas fa-user-plus fa-5x text-primary mb-3"></i>
-                                    <h4>Cadastre-se App5M Delivery</h4>
+                                    <h4>Cadastre-se InsideTec Delivery</h4>
                                     <p>Cadastro rápido e fácil para novos usuários</p>
                                 </div>
                             </div>
                             <div class="slide">
                                 <div class="delivery-screenshot">
                                     <i class="fas fa-hamburger fa-5x text-primary mb-3"></i>
-                                    <h4>Lista de Lanches App5M Delivery</h4>
+                                    <h4>Lista de Lanches InsideTec Delivery</h4>
                                     <p>Produtos com descrição detalhada e preços</p>
                                 </div>
                             </div>
@@ -463,10 +463,10 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
                         <h2 class="mb-4">Pronto para revolucionar seu delivery?</h2>
-                        <p class="lead mb-4">Entre em contato conosco e comece a vender mais com o App5M Delivery.</p>
+                        <p class="lead mb-4">Entre em contato conosco e comece a vender mais com o InsideTec Delivery.</p>
                         <div class="cta-buttons">
                             <a href="../index.html#contact" class="btn btn-primary btn-lg me-3">Solicitar Demonstração</a>
-                            <a href="http://www.app5mdelivery.com.br/" class="btn btn-outline-light btn-lg" target="_blank">Visitar Site</a>
+                            <a href="http://www.InsideTecdelivery.com.br/" class="btn btn-outline-light btn-lg" target="_blank">Visitar Site</a>
                         </div>
                     </div>
                 </div>
@@ -479,7 +479,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>&copy; 2025 App5M - Desenvolvimento de Aplicativos. Todos os direitos reservados.</p>
+                    <p>&copy; 2025 InsideTec - Desenvolvimento de Aplicativos. Todos os direitos reservados.</p>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <a href="../index.html#contact" class="text-light me-3">Contato</a>
