alterações em css e index

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon.png" rel="apple-touch-icon">
 </head>
 <body>
     <!-- Navigation -->
@@ -33,16 +36,16 @@
                         <a class="nav-link" href="#home">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Serviços</a>
+                        <a class="nav-link" href="pages/services.html">Serviços</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">Sobre</a>
+                        <a class="nav-link" href="pages/about.html">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#delivery">InsideTec Delivery</a>
+                        <a class="nav-link" href="pages/delivery.html">InsideTec Delivery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#cases">Cases</a>
+                        <a class="nav-link" href="pages/cases.html">Cases</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contato</a>
@@ -218,27 +221,26 @@
                         <p class="lead mb-4">A InsideTec tem como principal objetivo levar sua empresa para o smartphone do público em geral.</p>
                         <p class="mb-4">Hoje são raros os momentos que não podemos observar alguém utilizando um smartphone ou tablet, seja na rua, restaurantes, bares, festas, etc. Segundo estudos o celular é o principal meio de acesso à internet no Brasil e uma parcela dos brasileiros teve seu primeiro acesso através de um smartphone ou outro dispositivo móvel.</p>
                         
-                        <div class="platform-stats mb-4">
-                            <h5>Plataformas utilizadas pelos Brasileiros - Atualizada em 2024</h5>
-                            <div class="platform-list">
-                                <div class="platform-item">
-                                    <i class="fab fa-android"></i>
-                                    <span>Android</span>
-                                </div>
-                                <div class="platform-item">
-                                    <i class="fab fa-windows"></i>
-                                    <span>Windows</span>
-                                </div>
-                                <div class="platform-item">
-                                    <i class="fab fa-apple"></i>
-                                    <span>iOS</span>
-                                </div>
-                                <div class="platform-item">
-                                    <i class="fab fa-apple"></i>
-                                    <span>Mac</span>
-                                </div>
-                            </div>
-                        </div>
+                       <div class="about-platforms mb-4">
+    <h5>Plataformas utilizadas pelos Brasileiros - Atualizada em 2024</h5>
+    <div class="about-platforms-list">
+        <div class="about-platforms-item">
+            <i class="fab fa-android"></i>
+            <span>Android</span>
+        </div>
+        <div class="about-platforms-item">
+            <i class="fab fa-windows"></i>
+            <span>Windows</span>
+        </div>
+        <div class="about-platforms-item">
+            <i class="fab fa-apple"></i>
+            <span>iOS</span>
+        </div>
+        <div class="about-platforms-item">
+            <i class="fab fa-apple"></i> <span>Mac</span>
+        </div>
+    </div>
+</div>
                     </div>
                     <div class="col-lg-6">
                         <div class="about-questions">
@@ -497,7 +499,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/main.js"></script>
-    <script src="js/slider.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/slider.js"></script>
 </body>
 </html>
