--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
                         <a class="nav-link" href="pages/about.html">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/delivery.html">InsideTec Delivery</a>
+                        <a class="nav-link" href="pages/delivery.html">Seu app de Delivery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/cases.html">Cases</a>
+                     <!--   <a class="nav-link" href="pages/cases.html">Cases</a> -->
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contato</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#client-area">Área do Cliente</a>
+                       <!-- <a class="nav-link" href="#client-area">Área do Cliente</a> -->
                     </li>
                 </ul>
             </div>
@@ -110,7 +110,7 @@
                                     <i class="fab fa-apple"></i>
                                 </div>
                             </div>
-                            <a href="#app-development" class="btn btn-primary">Saiba mais detalhes</a>
+                           <!-- <a href="#app-development" class="btn btn-primary">Saiba mais detalhes</a> -->
                         </div>
                     </div>
 
@@ -129,17 +129,17 @@
                                     <i class="fas fa-mobile-alt"></i>
                                 </div>
                             </div>
-                            <a href="#website-creation" class="btn btn-primary">Saiba mais detalhes</a>
+                           <!--<a href="#website-creation" class="btn btn-primary">Saiba mais detalhes</a> --> 
                         </div>
                     </div>
 
                     <!-- Delivery Platform -->
                     <div class="col-lg-4 col-md-6">
-                        <div class="service-card h-100">
+                      <div class="service-card h-100">
                             <div class="service-icon">
                                 <i class="fas fa-utensils"></i>
                             </div>
-                            <h4>InsideTec Delivery</h4>
+                            <h4>Seu própio app de Delivery</h4>
                             <p>Tenha seu estabelecimento no smartphone de todos os seus clientes</p>
                             <h6>Disponível para Android, iOS e Site</h6>
                             <div class="service-animation">
@@ -148,7 +148,7 @@
                                     <i class="fas fa-motorcycle"></i>
                                 </div>
                             </div>
-                            <a href="http://www.InsideTecdelivery.com.br/" class="btn btn-primary" target="_blank">Saiba mais detalhes</a>
+                          <!--<a href="pages/delivery.html" class="btn btn-primary" target="_blank">Saiba mais detalhes</a> -->
                         </div>
                     </div>
 
@@ -168,7 +168,7 @@
                                     <i class="fab fa-twitter"></i>
                                 </div>
                             </div>
-                            <a href="#social-media" class="btn btn-primary">Saiba mais detalhes</a>
+                           <!-- <a href="#social-media" class="btn btn-primary">Saiba mais detalhes</a> -->
                         </div>
                     </div>
 
@@ -187,7 +187,7 @@
                                     <i class="fas fa-dollar-sign"></i>
                                 </div>
                             </div>
-                            <a href="#google-adwords" class="btn btn-primary">Saiba mais detalhes</a>
+                          <!--  <a href="#google-adwords" class="btn btn-primary">Saiba mais detalhes</a> -->
                         </div>
                     </div>
 
@@ -205,7 +205,7 @@
                                     <i class="fas fa-credit-card"></i>
                                 </div>
                             </div>
-                            <a href="#virtual-stores" class="btn btn-primary">Saiba mais detalhes</a>
+                           <!--<a href="#virtual-stores" class="btn btn-primary">Saiba mais detalhes</a> --> 
                         </div>
                     </div>
                 </div>
@@ -399,28 +399,30 @@
                                 <i class="fas fa-map-marker-alt"></i>
                                 <div>
                                     <h6>Endereço</h6>
-                                    <p>Rua Silvio Silveira Soares, 2331<br>Cavalhada - 91910-460<br>Porto Alegre/RS</p>
+                                    <p>Rua Otto Schmitt<br>
+                                    Gramado<br>
+                                    Serra Gaúcha</p>
                                 </div>
                             </div>
                             <div class="contact-item">
                                 <i class="fas fa-phone"></i>
                                 <div>
                                     <h6>Telefone</h6>
-                                    <p>(51) 9999-9999</p>
+                                    <p>(51) 99928-2430</p>
                                 </div>
                             </div>
                             <div class="contact-item">
                                 <i class="fas fa-envelope"></i>
                                 <div>
                                     <h6>E-mail</h6>
-                                    <p>contato@InsideTec.com.br</p>
+                                    <p>contactemrpires@gmail.com</p>
                                 </div>
                             </div>
                             <div class="social-links mt-4">
-                                <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+                                <a href="https://github.com/emersonpires-dev" class="social-link"><i class="fab fa-github"></i></a>
                                 <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                                <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
-                                <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+                               <!-- <a href="#" class="social-link"><i class="fab fa-youtube"></i></a> -->
+                                <a href="https://www.linkedin.com/in/emerson-pires-12481b2b4/" class="social-link"><i class="fab fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -434,7 +436,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>&copy; 2025 InsideTec - Desenvolvimento de Aplicativos. Todos os direitos reservados.</p>
+                    <p>&copy; 2025 InsideTec - Todos os direitos reservados.</p>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <a href="#client-area" class="text-light me-3">Área do Cliente</a>
