--- a/pages/services.html
+++ b/pages/services.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="delivery.html">Seu app de Delivery</a>
                     </li>
                     <li class="nav-item">
-                     <!--   <a class="nav-link" href="cases.html">Cases</a> -->
+                        <a class="nav-link" href="cases.html">Cases</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html#contact">Contato</a>
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Main Content -->
-    <main style="margin-top: 80px;">
+    <main style="margin-top:59px;">
         <!-- Hero Section -->
         <section class="hero-section py-5">
             <div class="container">
@@ -420,7 +420,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>&copy; 2025 InsideTec - Todos os direitos reservados.</p>
+                    <p>&copy; 2025 App5M - Desenvolvimento de Aplicativos. Todos os direitos reservados.</p>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <a href="../index.html#contact" class="text-light me-3">Contato</a>
@@ -435,5 +435,156 @@
     <!-- Custom JS -->
     <script src="../js/main.js"></script>
 
+    <style>
+        .services-visual {
+            position: relative;
+            height: 300px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .service-icons {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 30px;
+            text-align: center;
+        }
+
+        .service-icons i {
+            margin: 10px;
+            animation: float 3s ease-in-out infinite;
+        }
+
+        .service-icons i:nth-child(1) { animation-delay: 0s; }
+        .service-icons i:nth-child(2) { animation-delay: 0.5s; }
+        .service-icons i:nth-child(3) { animation-delay: 1s; }
+        .service-icons i:nth-child(4) { animation-delay: 1.5s; }
+
+        .service-detail-card {
+            background: white;
+            border-radius: 15px;
+            padding: 30px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+            height: 100%;
+        }
+
+        .service-detail-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .service-detail-card .service-icon {
+            width: 80px;
+            height: 80px;
+            margin: 0 auto 20px;
+            background: var(--gradient-primary);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 2rem;
+            color: white;
+        }
+
+        .service-features {
+            list-style: none;
+            padding: 0;
+            margin: 20px 0;
+        }
+
+        .service-features li {
+            padding: 5px 0;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .service-technologies {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 8px;
+            margin-top: 20px;
+        }
+
+        .tech-badge {
+            background: var(--primary-color);
+            color: white;
+            padding: 4px 12px;
+            border-radius: 15px;
+            font-size: 0.8rem;
+        }
+
+        .process-step {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            height: 100%;
+            transition: transform 0.3s ease;
+        }
+
+        .process-step:hover {
+            transform: translateY(-5px);
+        }
+
+        .step-number {
+            width: 60px;
+            height: 60px;
+            background: var(--gradient-primary);
+            color: white;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin: 0 auto 20px;
+        }
+
+        .cta-section {
+            background: var(--gradient-primary);
+            color: white;
+        }
+
+        .cta-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap;
+        }
+
+        .btn-outline-primary {
+            border-color: white;
+            color: white;
+        }
+
+        .btn-outline-primary:hover {
+            background: white;
+            color: var(--primary-color);
+        }
+
+        @media (max-width: 768px) {
+            .service-icons {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 20px;
+            }
+
+            .service-detail-card {
+                margin-bottom: 30px;
+            }
+
+            .cta-buttons {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .cta-buttons .btn {
+                width: 100%;
+                max-width: 300px;
+            }
+        }
+    </style>
 </body>
 </html>
