--- a/pages/services.html
+++ b/pages/services.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="delivery.html">Seu app de Delivery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cases.html">Cases</a>
+                       <!-- <a class="nav-link" href="cases.html">Cases</a> -->
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html#contact">Contato</a>
