--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<?php
+// Inicia a sessão para podermos usar o token
+if (session_status() === PHP_SESSION_NONE) {
+    session_start();
+}
+
+// Gera o token de segurança
+if (!isset($_SESSION['csrf_token'])) {
+    $_SESSION['csrf_token'] = bin2hex(random_bytes(32));
+}
+$csrf_token = $_SESSION['csrf_token'];
+?>
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -42,7 +54,7 @@
                         <a class="nav-link" href="pages/about.html">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/delivery.html">Seu app de Delivery</a>
+                      <!--  <a class="nav-link" href="pages/delivery.html">Seu app de Delivery</a> -->
                     </li>
                     <li class="nav-item">
                      <!--   <a class="nav-link" href="pages/cases.html">Cases</a> -->
@@ -359,36 +371,41 @@
                     <div class="col-lg-8">
                         <div class="contact-form">
                             <form id="contactForm" action="php/contact.php" method="POST">
-                                <div class="row">
-                                    <div class="col-md-6 mb-3">
-                                        <label for="name" class="form-label">Nome *</label>
-                                        <input type="text" class="form-control" id="name" name="name" required>
-                                    </div>
-                                    <div class="col-md-6 mb-3">
-                                        <label for="email" class="form-label">E-mail *</label>
-                                        <input type="email" class="form-control" id="email" name="email" required>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-6 mb-3">
-                                        <label for="phone" class="form-label">Telefone</label>
-                                        <input type="tel" class="form-control" id="phone" name="phone">
-                                    </div>
-                                    <div class="col-md-6 mb-3">
-                                        <label for="company" class="form-label">Empresa</label>
-                                        <input type="text" class="form-control" id="company" name="company">
-                                    </div>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="subject" class="form-label">Assunto *</label>
-                                    <input type="text" class="form-control" id="subject" name="subject" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="message" class="form-label">Mensagem *</label>
-                                    <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-primary btn-lg">Enviar Mensagem</button>
-                            </form>
+
+    <input type="hidden" name="csrf_token" value="<?php echo $csrf_token; ?>">
+    <input type="text" name="website" style="display:none;">
+
+    <div class="row">
+        <div class="col-md-6 mb-3">
+            <label for="name" class="form-label">Nome *</label>
+            <input type="text" class="form-control" id="name" name="name" required>
+        </div>
+        <div class="col-md-6 mb-3">
+            <label for="email" class="form-label">E-mail *</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 mb-3">
+            <label for="phone" class="form-label">Telefone</label>
+            <input type="tel" class="form-control" id="phone" name="phone">
+        </div>
+        <div class="col-md-6 mb-3">
+            <label for="company" class="form-label">Empresa</label>
+            <input type="text" class="form-control" id="company" name="company">
+        </div>
+    </div>
+    <div class="mb-3">
+        <label for="subject" class="form-label">Assunto *</label>
+        <input type="text" class="form-control" id="subject" name="subject" required>
+    </div>
+    <div class="mb-3">
+        <label for="message" class="form-label">Mensagem *</label>
+        <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary btn-lg">Enviar Mensagem</button>
+</form>
+<div id="form-messages" class="mt-3"></div>
                         </div>
                     </div>
                     
@@ -445,6 +462,50 @@
             </div>
         </div>
     </footer>
+    <script>
+        // Seleciona o formulário pelo ID
+        const contactForm = document.getElementById('contactForm');
+        // Seleciona o container de mensagens pelo ID
+        const formMessages = document.getElementById('form-messages');
+
+        // Adiciona um "ouvinte" para o evento de 'submit' do formulário
+        contactForm.addEventListener('submit', function(event) {
+            
+            // 1. Impede o comportamento padrão do navegador (que é recarregar a página)
+            event.preventDefault();
+
+            // 2. Coleta todos os dados do formulário
+            const formData = new FormData(contactForm);
+
+            // 3. Envia os dados para o seu script PHP usando a API Fetch
+            fetch('php/contact.php', {
+                method: 'POST',
+                body: formData
+            })
+            .then(response => response.json()) // Converte a resposta do PHP para JSON
+            .then(data => {
+                // 4. Usa a resposta recebida (data)
+                if (data.success) {
+                    // Se o envio foi um sucesso
+                    formMessages.innerHTML = `<div class="alert alert-success">${data.message}</div>`;
+                    contactForm.reset(); // Limpa o formulário
+                } else {
+                    // Se houve um erro
+                    let errorMessage = data.message;
+                    if (data.errors) {
+                        // Se houver uma lista de erros de validação
+                        errorMessage = data.errors.join('<br>');
+                    }
+                    formMessages.innerHTML = `<div class="alert alert-danger">${errorMessage}</div>`;
+                }
+            })
+            .catch(error => {
+                // 5. Caso haja um erro de rede ou algo que impeça a comunicação
+                console.error('Erro:', error);
+                formMessages.innerHTML = `<div class="alert alert-danger">Ocorreu um erro ao tentar enviar a mensagem. Tente novamente.</div>`;
+            });
+        });
+    </script>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
