--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ $csrf_token = $_SESSION['csrf_token'];
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#home">
-                <img src="assets/img/logos.png" alt="InsideTec Logo">
+                <img src="assets/img/InsideTec.svg" alt="InsideTec Logo">
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
