--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ $csrf_token = $_SESSION['csrf_token'];
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InsideTec - Desenvolvimento de Aplicativos Porto Alegre/RS</title>
-    <meta name="description" content="Criação de apps, lojas virtuais, desenvolvimento de aplicativos em Porto Alegre. Aplicativos nativos para Android e iOS.">
+    <title>InsideTec - Desenvolvimento de Aplicativos Gramado/RS</title>
+    <meta name="description" content="Criação de apps, lojas virtuais, desenvolvimento de aplicativos em Gramado. Aplicativos nativos para Android e iOS.">
     <meta name="keywords" content="criação de apps, criação de aplicativos, lojas virtuais, desenvolvimento de aplicativos, aplicativos, aplicativos móveis, android, ios, windows phone, poa, rs">
     
     <!-- Bootstrap CSS -->
